--- a/hungrezy-frontend-client/package.json
+++ b/hungrezy-frontend-client/package.json
@@ -1,26 +1,26 @@
 {
   "name": "foodapp-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
-    "@material-ui/styles": "^4.9.14",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.11.3",
     "axios": "^0.21.1",
-    "dayjs": "^1.8.28",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-places-autocomplete": "^7.2.1",
-    "react-redux": "^7.2.0",
+    "dayjs": "^1.10.4",
+    "jwt-decode": "^3.1.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
-    "react-swipeable-views-utils": "^0.13.9",
+    "react-swipeable-views-utils": "^0.14.0-alpha.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
